<resources>
    <string name="app_name">AndroidLab</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_name">Login name</string>
    <string name="password">Password</string>
    <string name="radio_button">RadioButton</string>
    <string name="check_box">CheckBox</string>
    <string name="switch_text">What does this do?</string>
    <string name="login_button">Login</string>
    <string name="dialog_message">Do you wish to finish this activity?</string>
    <string name="dialog_title">Alert</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_chat">Start Chat</string>
    <string name="button_send">Send</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="current_temperature">Current Temperature</string>
    <string name="min_temperature">Minimum Temperature</string>
    <string name="max_temperature">Maximum Temperature</string>
    <string name="message_selected_info">Message Here</string>
    <string name="message_selected_id">IDs</string>
    <string name="btn_delete">Delete this Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="robot_dialog">Do you want to go back?</string>
    <string name="robot_ok">Yes please!</string>
    <string name="robot_cancel">No thanks!</string>
    <string name="new_message">Enter a message</string>
</resources>
