<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.thanh.androidlab.WeatherForecast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivWeather"
            android:layout_width="200dp"
            android:layout_height="193dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:src="@android:drawable/screen_background_light"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="41dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCurrent"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/current_temperature"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:text="@string/current_temperature" />

            <TextView
                android:id="@+id/tvMin"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:gravity="center_vertical"
                android:text="@string/min_temperature"
                android:textSize="18sp"
                tools:text="@string/min_temperature" />

            <TextView
                android:id="@+id/tvMax"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:text="@string/max_temperature"
                android:textSize="18sp"
                tools:text="@string/max_temperature" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbWeather"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>
